--- a/nextgen/_config.yml
+++ b/nextgen/_config.yml
@@ -9,13 +9,13 @@ title:              Next Gen
 description:        Knowledge base for the use of the Next Gen components on Wordpress.
 
 # Site subpath, e.g. /blog
-baseurl:            "/Shutta-Cognita-NextGen"
+baseurl:            "/nextgen/"
 
 # Permalink URLs structure, for permalink style options see: https://jekyllrb.com/docs/permalinks/
 permalink:          /:title/
 
 # Site base hostname & protocol, e.g. http://example.com
-url:                "https://shuttadev.github.io"
+url:                "https://cognitamain.github.io"
 
 # Site logo, dark and light depending on page hero text setting dark/light
 logo_image:
